--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,10 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx", 
   },
   "include": [
-    "src"
-  ]
+    "src", "scr/**/*.d.ts",
+  ],
+  "extends": "./tsconfig.path.json"
 }
