--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "reactflow": "^11.7.0",
     "redux": "^4.2.1",
     "start": "^5.1.0",
     "styled-components": "^5.3.10",
