--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.19",
     "@chakra-ui/react": "^2.6.0",
     "@emotion/react": "^11.10.8",
     "@emotion/styled": "^11.10.8",
@@ -28,9 +29,11 @@
     "react": "^18.2.0",
     "react-chat-widget": "^3.1.4",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-textarea-autosize": "^8.4.1",
     "reactflow": "^11.7.0",
     "redux": "^4.2.1",
     "start": "^5.1.0",
