--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@chakra-ui/icons": "^2.0.19",
     "@chakra-ui/react": "^2.6.0",
+    "@dnd-kit/core": "^6.0.8",
+    "@dnd-kit/modifiers": "^6.0.1",
     "@emotion/react": "^11.10.8",
     "@emotion/styled": "^11.10.8",
     "@reduxjs/toolkit": "^1.9.5",
@@ -25,6 +27,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "framer-motion": "^10.12.7",
+    "lodash": "^4.17.21",
     "prettier": "^2.8.8",
     "react": "^18.2.0",
     "react-chat-widget": "^3.1.4",
