--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@dnd-kit/modifiers": "^6.0.1",
     "@emotion/react": "^11.10.8",
     "@emotion/styled": "^11.10.8",
+    "@hookform/resolvers": "^3.1.1",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -27,6 +28,7 @@
     "react": "^18.2.0",
     "react-chat-widget": "^3.1.4",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.44.3",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
@@ -36,7 +38,8 @@
     "start": "^5.1.0",
     "styled-components": "^5.3.10",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.2.0"
   },
   "scripts": {
     "start": "vite",
