--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-dom": "^18.0.11",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26",
+    "axios": "^1.4.0",
     "clsx": "^1.2.1",
     "framer-motion": "^10.12.7",
     "lodash": "^4.17.21",
