--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@types/styled-components": "^5.1.26",
     "axios": "^1.4.0",
     "clsx": "^1.2.1",
+    "emoji-picker-react": "^4.4.9",
     "framer-motion": "^10.12.7",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "prettier": "^2.8.8",
     "react": "^18.2.0",
     "react-chat-widget": "^3.1.4",
