--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react": "^18.0.38",
     "@types/react-dom": "^18.0.11",
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-tag-input": "^6.6.1",
     "@types/styled-components": "^5.1.26",
     "axios": "^1.4.0",
     "clsx": "^1.2.1",
@@ -31,11 +32,14 @@
     "prettier": "^2.8.8",
     "react": "^18.2.0",
     "react-chat-widget": "^3.1.4",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.3",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
+    "react-tag-input": "^6.8.1",
     "react-textarea-autosize": "^8.4.1",
     "reactflow": "^11.7.0",
     "redux": "^4.2.1",
